--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.8.2",
     "yargs": "^17.5.1"
   },
